--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,12 @@ dependencies:
   go_router: ^15.1.1
   google_fonts: ^6.2.1
   google_sign_in: ^6.3.0
+  image_picker: ^1.1.2
   json_annotation: ^4.9.0
   lottie: ^3.3.1
+  mobile_scanner: ^5.0.1
+  permission_handler: ^12.0.0+1
+  qr_flutter: ^4.1.0
   shared_preferences: ^2.5.3
 
 dev_dependencies:
