--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,11 @@ environment:
 dependencies:
   cloud_firestore: ^5.6.5
   cupertino_icons: ^1.0.8
+  firebase_analytics: ^11.4.6
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
+  firebase_crashlytics: ^4.3.6
+  firebase_performance: ^0.10.1+6
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
