feat: add supabase_flutter dependency to pubspec.yaml

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     invalid_annotation_target: ignore
+    unused_result: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
