--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   qr_flutter: ^4.1.0
   shared_preferences: ^2.5.3
+  supabase_flutter: ^2.0.0
 
 dev_dependencies:
   build_runner: ^2.4.15
